# workerbee

./: .gitignore  AGENTS.md  README.md  dy  index.html  package-lock.json  package.json  quick-input.html  screenshot-overlay.html  vite.config.ts  vitest.config.ts
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-files-deleted.txt  task-1-tsc-check.txt  task-2-api-clean.txt  task-3-cargo-check.txt  task-3-no-gen-refs.txt  task-4-cargo-check.txt  task-4-i18n-clean.txt  task-5-build.txt  task-5-cargo-check.txt  task-5-no-agent-app.txt  task-5-no-gen-refs.txt  task-5-viewing-fns.txt  task-6-settings-ui.txt  task-7-lightbox.txt  task-8-ai-vision.txt  task-8-cargo-check.txt  task-9-cargo-check.txt  task-9-hotkey.txt
.sisyphus/plans/: remove-report-generation.md  screenshot-feature.md  screenshot-fix.md
cli/: DESIGN.md  package-lock.json  package.json
cli/src/: add.ts  index.ts  inspect.ts
doc/: 方案.md
docs/: DESIGN_ts.md  report-generation-workflow.md
scripts/: build-cli.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  config.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: logs.rs  mod.rs  opencode.rs  reports.rs  screenshot.rs  templates.rs
src/__tests__/: prompt.test.ts
src/components/: InlineEntryContent.tsx  LogViewer.tsx  MarkdownEditor.tsx  MarkdownPreview.tsx  QuickInput.tsx  QuickLogDialog.tsx  ReportsView.tsx  RichTextEditor.tsx  SetupGuide.tsx  ShortcutRecorder.tsx  ShortcutsHelpDialog.tsx  (+1 more)
test/: hello.rs
(+27 files in other folders)
