[package]
name = "workerbee"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "workerbee"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "workerbee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "workerbee-cli"
path = "src/bin/workerbee-cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-dialog = "2.7.0"
chrono = "0.4.44"
dirs = "6.0.0"
tauri-plugin-http = { version = "2", features = ["stream"] }
tauri-plugin-agent-control = "0.1"
xcap = "0.4"
image = { version = "0.25", features = ["webp", "png", "jpeg"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }

